--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+1999-04-02  Erez Zadok  <ezk@cs.columbia.edu>
+
+	* doc/PLATFORMS: 1.2f ok on various versions of hpux cc
+
 1999-04-01 Thomas Tanner  <tanner@gmx.de>
 
 	* doc/libtool.texi: documented deplibs.test
