--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 1999-04-02  Alexandre Oliva  <oliva@dcc.unicamp.br>
 
+	* ltmain.in (-L*): do not abort just because a directory specified 
+	with -L does not exist; just warn and discard it
+
 	* depdemo/l1/Makefile.am (AUTOMAKE_OPTIONS): no-dependencies
 	* depdemo/l2/Makefile.am (AUTOMAKE_OPTIONS): ditto
 	* depdemo/l3/Makefile.am (AUTOMAKE_OPTIONS): ditto
