--- a/NEWS
+++ b/NEWS
@@ -1,9 +1,16 @@
 NEWS - list of user-visible changes between releases of GNU Libtool
 
-New in 1.3: 1999-03-??; CVS version 1.2g, Libtool team:
+New in 1.3: 1999-04-??; CVS version 1.2g, Libtool team:
+* AM_PROG_LIBTOOL is smaller and faster
+* Shared libraries on AmigaOS up to version 4 are now disabled
+  since they don't meet libtool's requirements for shared libraries
+* -L supports now relative directories
+* Libltdl has a new license: LGPL with a special exception
+* Libltdl can be used as stand-alone package
 * dlopen support for BeOS
 * Improved support for BeOS and Cygwin
 * Documentation updates
+* New tests
 * Bugfixes
 
 New in 1.2f: 1999-03-15; CVS version 1.2e, Libtool team:
