* ltconfig.in (archive_cmds, sunos4*): Revert to -Bstatic; the native linker doesn't even support -Bshareable, only GNU ld does. Do not use `gcc -shared' in archive_cmds, it breaks deplibs.test.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 1999-04-04  Alexandre Oliva  <oliva@dcc.unicamp.br>
 
+	* ltconfig.in (archive_cmds, sunos4*): Revert to -Bstatic; the
+	native linker doesn't even support -Bshareable, only GNU ld does.
+	Do not use `gcc -shared' in archive_cmds, it breaks deplibs.test.
+
 	* ltconfig.in: if ld_shlibs=no, set can_build_shared=no too,
 	otherwise it will just be disregarded.  This would cause
 	netbsd/m68k with GNU ld a.out, and certainly many other platforms, 
