--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 1999-04-04  Alexandre Oliva  <oliva@dcc.unicamp.br>
 
+	* ltconfig.in (sunos4*, GNU ld): -Bstatic is not enough for
+	deplibs.test to work with GNU ld; -Bshareable is needed here.
+
 	* ltconfig.in (ld_shlibs, amigaos*): Disable shared libs with
 	native ld too.
 
