--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+1999-04-05 Thomas Tanner  <tanner@gmx.de>
+
+	* demo/run.test: removed the unnecessary test
+	* demo/Makefile.am: ditto
+
 1999-04-04  Alexandre Oliva  <oliva@dcc.unicamp.br>
 
 	* ltconfig.in (sunos4*, GNU ld): -Bstatic is not enough for
