--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+1999-04-05  Alexandre Oliva  <oliva@dcc.unicamp.br>
+
+	* ltconfig.in (exclude_expsyms): Exclude _GLOBAL_OFFSET_TABLE_ by
+	default, as most a.out platforms use it, and end up in trouble if
+	we preload it, so it's safer to rule it out by default, and
+	special case its removal from exclude_expsyms if someone ever
+	complains.
+
 1999-04-05 Thomas Tanner  <tanner@gmx.de>
 
 	* doc/libtool.texi: reorder tests to reflect execution order,
