--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+1999-04-06 Thomas Tanner  <tanner@gmx.de>
+
+	* NEWS: improved DJGPP support
+	* libtool.m4: some DJGPP fixes
+	* ltconfig.in: ditto, reverted one of my previous patches: we need
+	  to check for NM
+	* ltmain.in: some DJGPP fixes
+
 1999-04-05  Alexandre Oliva  <oliva@dcc.unicamp.br>
 
 	* ltconfig.in (netbsd*, GNU ld): Support a.out shared libraries
