--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+1999-04-07  Alexandre Oliva  <oliva@dcc.unicamp.br>
+
+	* tests/dryrun.test: The constant modifications of libtool would
+	cause main.o to be updated at the wrong time; the new approach is
+	to modify the libtool script so that it enables dry run depending
+	on whether an environment variable is set or not.  I've also moved 
+	`after' and `before' to a directory deep within $objdir, instead
+	of creating it in ../tests.
+	* tests/Makefile.am (CLEANFILES): Removed.
+
 1999-04-06  Alexandre Oliva  <oliva@dcc.unicamp.br>
 
 	* tests/dryrun.test: We cannot rely on setting LIBTOOL, because
