--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+1999-04-07 Thomas Tanner  <tanner@gmx.de>
+
+	* libtool.m4: another DJGPP fix
+
 1999-04-07  Alexandre Oliva  <oliva@dcc.unicamp.br>
 
 	* doc/PLATFORMS: Updated to 1.3 for all platforms I've got.  I'll
