--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+1999-04-09 Thomas Tanner  <tanner@gmx.de>
+
+	* doc/libtool.texi: some cleanups in the libltdl documentation
+
 1999-04-07  Alexandre Oliva  <oliva@dcc.unicamp.br>
 
 	* ltconfig.in (--fallback-echo): Do not put an inline document and
