--- a/README
+++ b/README
@@ -19,6 +19,7 @@ Shared library support has been implemented for these platforms:
   HP-UX 9.x, 10.x, 11.x (*-*-hpux9*, *-*-hpux10*, *-*-hpux11*) [see note]
   IRIX 5.x, 6.x (*-*-irix5*, *-*-irix6*)
   NCR MP-RAS 3.x (*-ncr-sysv4.3*) [see note]
+  Motorola System V 4 (mk88-motorola-sysv4) [see note]
   NetBSD 1.x (*-*-netbsd*)
   OpenBSD 2.x (*-*-openbsd*)
   OS/2 using EMX (*-*-os2*)
@@ -38,6 +39,9 @@ these systems.
 NOTE: The vendor-distributed NCR MP-RAS cc programs emits copyright
 on standard error that confuse tests on size of conftest.err.  The
 workaround is to specify CC when run configure with CC='cc -Hnocopyr'.
+
+NOTE: Due to a bug in autoconf cc isn't supported on Motorola System V 4.
+You can only use gcc. This bug will hopefully be fixed in autoconf 2.14.
 
 NOTE: Any earlier DG/UX system with ELF executables, such as R3.10 or
 R4.10, is also likely to work, but hasn't been explicitly tested.
