--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+1999-04-10  Alexandre Oliva  <oliva@dcc.unicamp.br>
+
+	* ltconfig.in: Moved sysv4 before sysv4.*.
+	(symcode): Brian's overrider is specific to sysv4, not sysv4*.
+
 1999-04-09 Thomas Tanner  <tanner@gmx.de>
 
 	* NEWS, README: Motorola System V 4 support
