--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 1999-04-10  Alexandre Oliva  <oliva@dcc.unicamp.br>
 
+	* libtool.m4 (AC_PROG_LD, AC_PROG_NM): When looking for programs,
+	try $ac_exeext too, so that they're found on DJGPP/MS-DOS.
+	* ltconfig.in: Likewise.
+	Reported by Robert S. Maier <rsm@math.arizona.edu>
+
 	* ltconfig.in (Usage): Removed --enable-dlopen-self.
 	Reported by Pavel Roskin <pavel_roskin@geocities.com>
 
