--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 1999-04-12  Alexandre Oliva  <oliva@dcc.unicamp.br>
 
+	* doc/libtool.texi (Invoking ltconfig): Document environment
+	variables used.
+
 	* doc/libtool.texi (Invoking ltconfig): Document --cache-file.
 
 	* doc/libtool.texi (Invoking ltconfig): Document
