--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+1999-04-12  Alexandre Oliva  <oliva@dcc.unicamp.br>
+
+	* libltdl/ltdl.c: Remove trivial warnings.
+
 1999-04-12  John David Anglin  <dave.anglin@nrc.ca>
 
 	* libltdl/ltdl.c (shl_close): shl_t was correct here...
