--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+1999-04-25  Alexandre Oliva  <oliva@dcc.unicamp.br>
+
+	* TODO: -Wl and -Wc options.
+
 1999-04-12  Alexandre Oliva  <oliva@dcc.unicamp.br>
 
 	* libltdl/ltdl.c: Remove trivial warnings.
