--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 1999-04-25  Alexandre Oliva  <oliva@dcc.unicamp.br>
 
+	* demo/Makefile.am (hc-direct, hc-libflag, hc-libpath, hc-minusl):
+	Added CFLAGS to link commands; SCO OSR needs it for -belf.
+
 	* TODO: -Wl and -Wc options.
 
 1999-04-12  Alexandre Oliva  <oliva@dcc.unicamp.br>
