--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 1999-04-25  Alexandre Oliva  <oliva@dcc.unicamp.br>
 
+	* ltconfig.in (old_LDFLAGS, old_LIBS): Save and write to comments
+	in output file.
+
 	* ltmain.in (prefer_static_libs): New variable, set to no by
 	default, but set to yes by -static and -all-static.  Used instead
 	of build_libtool_libs to decide whether to use a shared or static
