--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 1999-04-25  Alexandre Oliva  <oliva@dcc.unicamp.br>
 
+	* ltconfig.in (irix5*, need_lib_prefix, need_version): Set to no,
+	by unifying with irix6*.
+
 	* ltconfig.in (irix*, osf*, deplibs_check_method): Use pass_all.
 
 	* ltconfig.in (old_LDFLAGS, old_LIBS): Save and write to comments
