--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 1999-04-25  Alexandre Oliva  <oliva@dcc.unicamp.br>
 
+	* ltconfig.in (irix*, soname_spec): Append $major.
+	(irix*, library_names_spec): Add new soname.
+	Reported by David Kaelbling <drk@sgi.com>
+	
 	* ltconfig.in (irix*, sys_lib_dlsearch_path_spec): /usr/local/lib
 	is not searched by default.  /usr/lib is searched before /lib.
 	* ltconfig.in (irix*, sys_lib_search_path_spec): /usr/lib is
