--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 1999-04-25  Alexandre Oliva  <oliva@dcc.unicamp.br>
 
+	* ltconfig.in (hpux*, hardcode_minus_L): Set to yes.
+	(hpux*, hardcode_libdir_flag_spec): Do not use +s by default.
+	(hpux*, shlibpath_overrides_runpath): Set to no.
+
 	* ltconfig.in (irix*, osf*, archive_cmds): Write so_locations
 	within objdir.
 
