--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 1999-04-25  Alexandre Oliva  <oliva@dcc.unicamp.br>
 
+	* ltconfig.in (beos*, allow_undefined_flag): Do not build shared
+	libraries with undefined symbols.
+
 	* ltconfig.in (aix4*, allow_undefined_flag): Set to -berok.
 	(aix4*, shared_flag): Set to -shared or ${wl}-bM:SRE.
 	(aix4*, archive_cmds): Use -bexpall.
