--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 1999-04-25  Alexandre Oliva  <oliva@dcc.unicamp.br>
 
+	* ltconfig.in (solaris*, whole_archive_flag_spec): Use -z
+	allextract/defaultextract from Solaris 2.6 on.
+	Reported by Brian Ford <ford@vss.fsi.com>
+
 	* ltconfig.in (beos*, allow_undefined_flag): Do not build shared
 	libraries with undefined symbols.
 
