* libtool.m4 (OBJDUMP): Pass it to ltconfig. * configure.in: AC_SUBST DLLTOOL, OBJDUMP and AS. * Makefile.am (libtool, clibtool): Pass them to ltconfig. * doc/libtool.texi (Invoking ltconfig): Document OBJDUMP.

--- a/doc/libtool.texi
+++ b/doc/libtool.texi
@@ -1647,12 +1647,17 @@ hard-link otherwise.
 
 @defvar DLLTOOL
 Program to use rather than checking for @code{dlltool}.  Only meaningful 
-for MS-Windows.
+for Cygwin/MS-Windows.
+@end defvar
+
+@defvar OBJDUMP
+Program to use rather than checking for @code{objdump}.  Only meaningful 
+for Cygwin/MS-Windows.
 @end defvar
 
 @defvar AS
 Program to use rather than checking for @code{as}.  Only meaningful for
-MS-Windows.
+Cygwin/MS-Windows.
 @end defvar
 
 @node ltconfig example
