--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+1999-04-25  Alexandre Oliva  <oliva@dcc.unicamp.br>
+
+	* libtool.m4 (OBJDUMP): Pass it to ltconfig.
+	* configure.in: AC_SUBST DLLTOOL, OBJDUMP and AS.
+	* Makefile.am (libtool, clibtool): Pass them to ltconfig.
+
 1999-04-25  Frank Ch. Eigler  <fche@cygnus.com>
 
 	* libtool.m4 (cygwin*): Look for target objdump tool.
