--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+1999-04-26  Alexandre Oliva  <oliva@dcc.unicamp.br>
+
+	* ltconfig.in (aix4.[01], always_export_symbols): The case pattern 
+	would never match; fixed.
+	Reported by Stephan Kulow <coolo@itm.mu-luebeck.de>
+
 1999-04-25  Alexandre Oliva  <oliva@dcc.unicamp.br>
 
 	* libtool.m4 (OBJDUMP): Pass it to ltconfig.
