--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+1999-04-26  Erez Zadok  <ezk@cs.columbia.edu>
+
+	* doc/PLATFORMS: Updates for netbsd 1.3.3 and 1.4.
+
 1999-04-26  Alexandre Oliva  <oliva@dcc.unicamp.br>
 
 	* ltconfig.in (aix4.[01], always_export_symbols): The case pattern 
